--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.nukkitx.fastutil</groupId>
+            <artifactId>fastutil-object-int-maps</artifactId>
+            <version>8.5.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
