--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,7 @@
                 <configuration>
                     <show>public</show>
                     <failOnError>false</failOnError>
+                    <excludePackageNames>com.github.steveice10.packetlib:com.github.steveice10.packetlib.*:com.github.steveice10.packetlib.*.*</excludePackageNames>
                 </configuration>
             </plugin>
             <plugin>
