--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,10 @@ jobs:
           distribution: temurin
           overwrite-settings: true
           server-id: opencollab-snapshot-repo
-          server-username: ${{ vars.DEPLOY_USER }}
-          server-password: ${{ secrets.DEPLOY_PASS }}
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
       - name: Deploy with Maven
         run: mvn deploy -B -P deploy
+        env:
+          MAVEN_USERNAME: ${{ vars.DEPLOY_USER }}
+          MAVEN_PASSWORD: ${{ secrets.DEPLOY_PASS }}
