--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,15 +12,18 @@ jobs:
 
     steps:
       - name: Checkout repository
+        # See https://github.com/actions/checkout/commits
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
       - name: Set up JDK 1.8
+        # See https://github.com/actions/setup-java/commits
         uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0
         with:
           java-version: 8
           distribution: temurin
 
       - uses: s4u/maven-settings-action@60912582505985be4cc55d2b890eb32767f8de5f
+        # See https://github.com/s4u/maven-settings-action/commits
         with:
           servers: '[{"id": "opencollab-release-repo", "username": "${env.MAVEN_USERNAME}", "password": "${env.MAVEN_PASSWORD}"},{"id": "opencollab-snapshot-repo", "username": "${env.MAVEN_USERNAME}", "password": "${env.MAVEN_PASSWORD}"}]'
 
