--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.steveice10</groupId>
     <artifactId>mcprotocollib</artifactId>
-    <version>1.20.2-1-SNAPSHOT</version>
+    <version>1.20.2-1</version>
     <packaging>jar</packaging>
 
     <name>MCProtocolLib</name>
