--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,10 @@ jobs:
         # See https://github.com/actions/checkout/commits
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
 
+      - name: Validate Gradle wrapper
+        # See https://github.com/gradle/wrapper-validation-action/commits
+        uses: gradle/wrapper-validation-action@342dbebe7272035434f9baccc29a816ec6dd2c7b
+
       - name: Set up JDK 16
         # See https://github.com/actions/setup-java/commits
         uses: actions/setup-java@0ab4596768b603586c0de567f2430c30f5b0d2b0
