--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,11 @@ jobs:
           java-version: 17
           distribution: temurin
 
-      - name: Deploy with Gradle
-        run: ./gradlew deploy
+      - name: Publish to Maven Repository
+        if: ${{ success() && github.repository == 'GeyserMC/MCProtocolLib' && github.ref_name == 'master' }}
+        uses: gradle/gradle-build-action@3bfe3a46584a206fb8361cdedd0647b0c4204232
         env:
           OPENCOLLAB_USERNAME: ${{ vars.DEPLOY_USER }}
           OPENCOLLAB_PASSWORD: ${{ secrets.DEPLOY_PASS }}
+        with:
+          arguments: publish
