--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,8 @@ metadata.format.version = "1.1"
 
 [versions]
 
-indra = "2.2.2"
+indra = "3.1.3"
+lombok = "1.18.30"
 
 [libraries]
 
@@ -22,7 +23,7 @@ netty-all = "io.netty:netty-all:4.1.99.Final"
 netty-codec-haproxy = "io.netty:netty-codec-haproxy:4.1.99.Final"
 netty-incubator-transport-native-io_uring = "io.netty.incubator:netty-incubator-transport-native-io_uring:0.0.23.Final"
 
-lombok = "org.projectlombok:lombok:1.18.30"
+checkerframework-qual = "org.checkerframework:checker-qual:3.41.0"
 
 junit-jupiter = "org.junit.jupiter:junit-jupiter:5.8.2"
 
