--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ metadata.format.version = "1.1"
 [versions]
 
 indra = "2.2.2"
+lombok = "1.18.30"
 
 [libraries]
 
@@ -18,11 +19,8 @@ math-immutable = "org.cloudburstmc.math:immutable:2.0"
 fastutil-object2int-maps = "com.nukkitx.fastutil:fastutil-object-int-maps:8.5.3"
 fastutil-int2object-maps = "com.nukkitx.fastutil:fastutil-int-object-maps:8.5.3"
 
-netty-all = "io.netty:netty-all:4.1.99.Final"
-netty-codec-haproxy = "io.netty:netty-codec-haproxy:4.1.99.Final"
-netty-incubator-transport-native-io_uring = "io.netty.incubator:netty-incubator-transport-native-io_uring:0.0.23.Final"
-
-lombok = "org.projectlombok:lombok:1.18.30"
+netty-all = "io.netty:netty-all:4.1.101.Final"
+netty-incubator-transport-native-io_uring = "io.netty.incubator:netty-incubator-transport-native-io_uring:0.0.24.Final"
 
 junit-jupiter = "org.junit.jupiter:junit-jupiter:5.8.2"
 
@@ -38,4 +36,4 @@ lombok = { id = "io.freefair.lombok", version = "8.4" }
 adventure = ["adventure-text-serializer-gson", "adventure-text-serializer-gson-legacy-impl"]
 math = ["math-api", "math-immutable"]
 fastutil = ["fastutil-object2int-maps", "fastutil-int2object-maps"]
-netty = ["netty-all", "netty-codec-haproxy", "netty-incubator-transport-native-io_uring"]
+netty = ["netty-all", "netty-incubator-transport-native-io_uring"]
