--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,25 +5,32 @@ metadata.format.version = "1.1"
 indra = "2.2.2"
 lombok = "1.18.30"
 adventure = "4.15.0-20231207.074016-23"
+opennbt = "1.6"
+mcauthlib = "6621fd0"
+math = "2.0"
+fastutil-maps = "8.5.3"
+netty = "4.1.103.Final"
+netty-io_uring = "0.0.24.Final"
+junit = "5.8.2"
 
 [libraries]
 
 adventure-text-serializer-gson = { module = "net.kyori:adventure-text-serializer-gson", version.ref = "adventure" }
 adventure-text-serializer-json-legacy-impl = { module = "net.kyori:adventure-text-serializer-json-legacy-impl", version.ref = "adventure" }
 
-opennbt = "com.github.steveice10:opennbt:1.6"
-mcauthlib = "com.github.GeyserMC:mcauthlib:6621fd0"
+opennbt = { module = "com.github.steveice10:opennbt", version.ref = "opennbt" }
+mcauthlib = { module = "com.github.GeyserMC:mcauthlib", version.ref = "mcauthlib" }
 
-math-api = "org.cloudburstmc.math:api:2.0"
-math-immutable = "org.cloudburstmc.math:immutable:2.0"
+math-api = { module = "org.cloudburstmc.math:api", version.ref = "math" }
+math-immutable = { module = "org.cloudburstmc.math:immutable", version.ref = "math" }
 
-fastutil-object2int-maps = "com.nukkitx.fastutil:fastutil-object-int-maps:8.5.3"
-fastutil-int2object-maps = "com.nukkitx.fastutil:fastutil-int-object-maps:8.5.3"
+fastutil-object2int-maps = { module = "com.nukkitx.fastutil:fastutil-object-int-maps", version.ref = "fastutil-maps" }
+fastutil-int2object-maps = { module = "com.nukkitx.fastutil:fastutil-int-object-maps", version.ref = "fastutil-maps" }
 
-netty-all = "io.netty:netty-all:4.1.103.Final"
-netty-incubator-transport-native-io_uring = "io.netty.incubator:netty-incubator-transport-native-io_uring:0.0.24.Final"
+netty-all = { module = "io.netty:netty-all", version.ref = "netty" }
+netty-incubator-transport-native-io_uring = { module = "io.netty.incubator:netty-incubator-transport-native-io_uring", version.ref = "netty-io_uring" }
 
-junit-jupiter = "org.junit.jupiter:junit-jupiter:5.8.2"
+junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
 
 [plugins]
 
