--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,10 @@ metadata.format.version = "1.1"
 
 [versions]
 
-indra = "2.2.2"
-lombok = "1.18.30"
-adventure = "4.15.0-20231207.074016-23"
+indra = "3.1.3"
+lombok-version = "1.18.30"
+lombok-plugin = "8.4"
+adventure = "4.15.0"
 opennbt = "1.6"
 mcauthlib = "6621fd0"
 math = "2.0"
@@ -37,7 +38,7 @@ junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "jun
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
 indra-publishing = { id = "net.kyori.indra.publishing", version.ref = "indra" }
-lombok = { id = "io.freefair.lombok", version = "8.4" }
+lombok = { id = "io.freefair.lombok", version.ref = "lombok-plugin" }
 
 [bundles]
 
