--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,6 @@ metadata.format.version = "1.1"
 
 [versions]
 
-indra = "3.1.3"
-lombok-version = "1.18.30"
-lombok-plugin = "8.4"
 adventure = "4.15.0"
 opennbt = "1.6"
 mcauthlib = "6621fd0"
@@ -14,6 +11,11 @@ netty = "4.1.103.Final"
 netty-io_uring = "0.0.24.Final"
 checkerframework = "3.42.0"
 junit = "5.8.2"
+
+# buildSrc
+indra = "3.1.3"
+lombok = "1.18.30"
+lombok-plugin = "8.4"
 
 [libraries]
 
@@ -37,12 +39,10 @@ checkerframework-qual = { module = "org.checkerframework:checker-qual", version.
 
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
 
-[plugins]
-
-indra = { id = "net.kyori.indra", version.ref = "indra" }
-indra-git = { id = "net.kyori.indra.git", version.ref = "indra" }
-indra-publishing = { id = "net.kyori.indra.publishing", version.ref = "indra" }
-lombok = { id = "io.freefair.lombok", version.ref = "lombok-plugin" }
+# buildSrc
+indra-common = { module = "net.kyori:indra-common", version.ref = "indra" }
+indra-git = { module = "net.kyori:indra-git", version.ref = "indra" }
+lombok = { module = "io.freefair.gradle:lombok-plugin", version.ref = "lombok-plugin" }
 
 [bundles]
 
