--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ junit = "5.8.2"
 
 # buildSrc
 indra = "3.1.3"
-lombok = "1.18.30"
+lombok-version = "1.18.30"
 lombok-plugin = "8.4"
 
 [libraries]
