--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ fastutil-maps = "8.5.3"
 netty = "4.1.103.Final"
 netty-io_uring = "0.0.24.Final"
 gson = "2.10.1"
+minecraftauth = "4.0.0"
 checkerframework = "3.42.0"
 junit = "5.8.2"
 
@@ -35,6 +36,8 @@ netty-all = { module = "io.netty:netty-all", version.ref = "netty" }
 netty-incubator-transport-native-io_uring = { module = "io.netty.incubator:netty-incubator-transport-native-io_uring", version.ref = "netty-io_uring" }
 
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+
+minecraftauth = { module = "net.raphimc:MinecraftAuth", version.ref = "minecraftauth" }
 
 checkerframework-qual = { module = "org.checkerframework:checker-qual", version.ref = "checkerframework" }
 
