--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ indent_size = 4
 indent_style = space
 insert_final_newline = true
 tab_width = 4
+max_line_length = off
 
 [*.java]
 ij_java_class_count_to_use_import_on_demand = 9999
