--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ fastutil-maps = "8.5.3"
 netty = "4.1.103.Final"
 netty-io_uring = "0.0.24.Final"
 gson = "2.10.1"
-minecraftauth = "4.0.1-SNAPSHOT"
+minecraftauth = "4.0.1"
 checkerframework = "3.42.0"
 junit = "5.8.2"
 
